# wasm-extension-template

./: Cargo.toml  README.md  build.sh  manifest_v3.json
pkg/: inject_module.js  manifest.json  run_wasm.js
src/: lib.rs  util.rs
